Sextant view / Break word to avoid shift in col layout. https://gitlab.ifremer.fr/sextant/geonetwork/-/issues/194.

--- a/web-ui/src/main/resources/catalog/views/sextant/less/formatter.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/formatter.less
@@ -3,6 +3,7 @@
 .gn-metadata-view.gn-view-sextant {
   table td {
     border-top: none;
+    word-break: break-word;
   }
   td, p, dt, dl, div {
     font-size: 13px !important;
